@@ -1,3 +1,12 @@
+2017-09-04  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/82060
+	* tree-ssa-pre.c (eliminate_dom_walker::before_dom_children):
+	Move devirtualization after stmt folding and before EH/AB/noreturn
+	cleanup to get the stmt refs canonicalized.  Use a bool instead
+	of gimple_modified_p since that doesn't work for NOPs.  Schedule
+	NOPs generated by folding for removal.
+
 2017-09-04  Richard Sandiford  <richard.sandiford@linaro.org>
 	    Alan Hayward  <alan.hayward@arm.com>
 	    David Sherwood  <david.sherwood@arm.com>
